--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: motorway-test-backend
@@ -11,3 +13,24 @@ services:
       - POSTGRES_DB=motorway
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  api:
+    image: motorway-api
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=motorway
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - CACHED_VEHICLE_DATA_TTL=2
+    ports:
+      - 3001:3000
+    depends_on:
+      db:
+        condition: service_healthy
+      
